<resources>
    <string name="app_name">Daily Weight Management</string>
    <string name="app_welcome">Welcome To \n Daily Weight Management</string>
    <string name="new_user_title">Register New User</string>
    <string name="daily_weight_title">Daily Weight Form</string>
    <string name="goal_weight_title">Goal Weight Form</string>
    <string name="phone_number_title">Phone Number Form</string>
    <string name="username_credentials">Username</string>
    <string name="password_credentials">Password</string>
    <string name="phone_number_credentials">Phone Number (Optional)</string>
    <string name="goal_weight_credentials">Goal Weight (Optional)</string>
    <string name="login_button">Login</string>
    <string name="new_user_button">New User</string>
    <string name="register_new_user_button">Register</string>
    <string name="sms_permission_item">Provide SMS Permissions</string>
    <string name="sms_phone_number_item">Set or update user phone number</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="logout">Logout</string>
    <string name="goal_weight">Goal Weight:\u0020</string>
    <string name="goal_weight2">\u0020LBS</string>
    <string name="delete_row">Delete</string>
    <string name="date">Date: </string>
    <string name="weight">Weight: </string>
    <string name="query_weight">Please enter weight below</string>
    <string name="query_date">Please enter date below</string>
    <string name="query_goal_weight">Please enter goal weight below</string>
    <string name="confirm_date_weight">Add or update \n daily weight</string>
    <string name="confirm_goal_weight">Add or update \n goal weight</string>
    <string name="phone_number_prompt">Please enter phone number</string>
    <string name="confirm_phone_number">Submit phone number</string>
    <string name="current_phone_number">Current phone number: \u0020</string>
    <string name="current_goal_weight">Current goal weight: \u0020</string>
    <string name="navigation_drawer_open">Setting Drawer Open</string>
    <string name="navigation_drawer_close">Setting Drawer Closed</string>


</resources>