<?xml version="1.0" encoding="utf-8"?>
<!--UI for phoneNumberInputActivity-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneNumberInputActivity">

    <!--Prompt user for phone number-->
    <TextView
        android:id="@+id/numberPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number_prompt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"/>

    <!--Record user phone number-->
    <EditText
        android:id="@+id/numberInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        app:layout_constraintLeft_toLeftOf="@id/numberPrompt"
        app:layout_constraintRight_toRightOf="@id/numberPrompt"
        app:layout_constraintTop_toBottomOf="@id/numberPrompt"
        android:hint="@string/phone_number_hint"
        android:autofillHints="no" />

    <!--Submit user phone number-->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_phone_number"
        android:onClick="savePhoneNumber"
        style="@style/buttonGeneral"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numberInput"
        android:layout_margin="15dp"/>

    <!--Display current phone number of present-->
    <TextView
        android:id="@+id/currentNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_phone_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        android:layout_marginTop="50dp" />
</androidx.constraintlayout.widget.ConstraintLayout>