<?xml version="1.0" encoding="utf-8"?>
<!--UI for activity to input daily weight-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dailyWeightActivity">


    <!--Prompt user for weight-->
    <TextView
        android:id="@+id/weightPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/query_weight"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="75dp"/>

    <!--Record user weight-->
    <EditText
        android:id="@+id/weightInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="@id/weightPrompt"
        app:layout_constraintRight_toRightOf="@id/weightPrompt"
        app:layout_constraintTop_toBottomOf="@id/weightPrompt"
         />

    <!--Prompt user for date-->
    <TextView
        android:id="@+id/datePrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/query_date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weightInput"
        android:layout_marginTop="10dp"/>

    <!--Open date picker and display chosen date-->
    <TextView
        android:id="@+id/dateInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="datePicker"
        android:inputType="date"
        android:background="?attr/editTextBackground"
        app:layout_constraintLeft_toLeftOf="@id/weightPrompt"
        app:layout_constraintRight_toRightOf="@id/weightPrompt"
        app:layout_constraintTop_toBottomOf="@id/datePrompt"
         />

    <!--Submit daily weight-->
    <Button
        android:id="@+id/dateWeightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_date_weight"
        android:onClick="submitDailyWeight"
        style="@style/buttonGeneral"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateInput"
        android:layout_margin="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>