<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/rectangle">

    <TextView
        android:id="@+id/weightText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/weight"
        app:layout_constraintEnd_toStartOf="@+id/weightValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.15"
        style="@style/scrollMenu"/>


    <TextView
        android:id="@+id/weightValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:text="weight here"
        app:layout_constraintEnd_toStartOf="@+id/dateText"
        app:layout_constraintStart_toEndOf="@+id/weightText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.15"
        style="@style/scrollMenu"/>


    <TextView
        android:id="@+id/dateText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/date"
        app:layout_constraintEnd_toStartOf="@+id/dateValue"
        app:layout_constraintStart_toEndOf="@+id/weightValue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.10"
        style="@style/scrollMenu"/>


    <TextView
        android:id="@+id/dateValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:text="date here "
        app:layout_constraintEnd_toStartOf="@+id/deleteRow"
        app:layout_constraintStart_toEndOf="@+id/dateText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.20"
        style="@style/scrollMenu"/>

    <Button
        android:id="@+id/deleteRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/delete_row"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dateValue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.23"
        style="@style/buttonDelete"/>


</androidx.constraintlayout.widget.ConstraintLayout>