<?xml version="1.0" encoding="utf-8"?>
<!--UI for activity to input user goal weight-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_gradient"
    android:orientation="horizontal"
    android:gravity="center_horizontal"
    tools:context=".GoalWeightActivity">

    <!--Card view for view design-->
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:contentPadding="50dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="30dp"
        android:layout_marginTop="100dp"
        app:cardBackgroundColor="?colorContainer">

        <!--Constrained layout to hold text elements-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--Goal Weight title display-->
            <TextView
                android:id="@+id/welcomeTextGoalWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal_weight_title"
                style="@style/titleText"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--Prompt user for goal weight-->
            <TextView
                android:id="@+id/goalWeightPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/query_goal_weight"
                style="@style/editTitleStyle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcomeTextGoalWeight"
                android:layout_marginTop="40dp"/>

            <!--Record user goal weight-->
            <EditText
                android:id="@+id/goalWeightInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:background="@drawable/custom_edittext"
                android:padding="5dp"
                style="@style/editTitleStyle"
                app:layout_constraintLeft_toLeftOf="@id/goalWeightPrompt"
                app:layout_constraintRight_toRightOf="@id/goalWeightPrompt"
                app:layout_constraintTop_toBottomOf="@id/goalWeightPrompt" />

            <!--Submit goal weight-->
            <Button
                android:id="@+id/goalWeightButton"
                style="@style/buttonGeneral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_goal_weight"
                android:onClick="submitGoalWeight"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/goalWeightInput"
                android:layout_margin="15dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>