<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidUnknownAttribute -->
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainDrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/goalWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/goal_weight"
            style="@style/goalWeight"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/weightTable"
             />

        <ImageButton
            android:id="@+id/permissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="openSettings"
            android:src="@drawable/ic_settings"
            android:background="@null"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/weightTable"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/goal_weight" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/weightTable"
            android:layout_marginBottom="100dp"
            android:layout_marginTop="75dp"
            android:layout_marginHorizontal="10dp"
            android:paddingTop="50dp"
            android:paddingBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/recycle_item" />

        <Button
            android:id="@+id/dailyWeightInputButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="openDailyWeightActivity"
            style="@style/buttonGeneral"
            app:layout_constraintTop_toBottomOf="@+id/weightTable"
            app:layout_constraintRight_toLeftOf="@+id/goalWeightInputButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/confirm_date_weight" />

        <Button
            android:id="@+id/goalWeightInputButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="openGoalWeightActivity"
            style="@style/buttonGeneral"
            app:layout_constraintTop_toBottomOf="@+id/weightTable"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/dailyWeightInputButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/confirm_goal_weight" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/title_header"
        app:menu="@menu/nav_drawer_menu"/>



</androidx.drawerlayout.widget.DrawerLayout>